fully functional, code refactored

--- a/main.html
+++ b/main.html
@@ -8,26 +8,27 @@
 </head>
 <body ng-controller="profile">
 	<h1>Tinder</h1>
-	<div>
-		<img src="sean.jpg">
-	</div>
+
+	<div><img src="sean.jpg"></div>
+
 	<h2>Sean Baillargeon</h1>
+
 	<h3>Hobbies</h3>
 	<div>
-	<p ng-model="para[0]" ng-click='modify(0)'>Lorem ipsum dolor sit amet, id alterum postulant cotidieque mea, sed nisl sadipscing intellegebat eu. Duo at deleniti delicata, at vel tibique reformidans, in vero meliore vim. Abhorreant accommodare est ut, debitis voluptaria appellantur qui ad, duo an dicit utamur.</p>
-	<textarea ng-model="input[0]" ng-show='showInput[0]' ng-blur='doneTalking(0)'>{{para[0]}}</textarea>
+	<p ng-bind="userData[0]" ng-click='modifyData(0, $event)'>{{userData[0]}}</p>
+	<textarea ng-model="userData[0]" ng-show='displayTextarea[0]' ng-blur='doneEditing(0)'></textarea>
 	</div>
 	
 	<h3>What I Love About Myself</h3>
 	<div>
-	<p ng-model="para[1]" ng-click='modify(1)'>Vix viris officiis ei, rebum simul cetero vel ea. Et vis ludus libris tibique, quo et velit movet consequuntur. Duo brute sanctus mnesarchum at, quem definiebas eloquentiam ne qui. Etiam consectetuer cu has. Pro cu partem audiam facilis, liber epicuri scribentur vis cu.</p>
-	<textarea ng-model="input[1]" ng-show='showInput[1]' ng-blur='doneTalking(1)'>{{para[1]}}</textarea>
+	<p ng-bind="userData[1]" ng-click='modifyData(1, $event)'>{{userData[1]}}</p>
+	<textarea ng-model="userData[1]" ng-show='displayTextarea[1]' ng-blur='doneEditing(1)'>{{userData[1]}}</textarea>
 	</div>
 	
 	<h3>Why You Should Date Me</h3>
 	<div>
-	<p ng-model="para[1]" ng-click='modify(2)'>Tantas melius persequeris sit ne, ut facer iudicabit sea. An mei velit docendi ponderum, solum dolorum suavitate an nec, vix agam ferri iriure an. Has prodesset posidonium necessitatibus ei. Nisl aperiri virtute nam et. Errem affert sed ex, an laudem aliquando scribentur duo.</p>
-	<textarea ng-model="input[2]" ng-show='showInput[2]' ng-blur='doneTalking(0)'>{{para[2]}}</textarea>
+	<p ng-bind="userData[2]" ng-click='modifyData(2, $event)'>{{userData[2]}}</p>
+	<textarea ng-model="userData[2]" ng-show='displayTextarea[2]' ng-blur='doneEditing(2)'>{{userData[2]}}</textarea>
 	</div>
 
 </body>
